spade-tests/src/snapshots/spade_tests__typeinference__type_error_on_port_set_to_port.snap
---
source: spade-tests/src/typeinference.rs
---
// NOTE: returning bool because we don't support unit types
entity set_port(p: &mut int<10>, v: &mut int<10>) -> bool {
    set p = v;
    false
}


error: Expected type int<10>, got &mut int<10>
  ┌─ testinput:3:13
  │
3 │     set p = v;
  │             ^ Expected int<10>
  │
  = note: Expected: int<10>
               Got: &mut int<10>


